--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./database/init:/docker-entrypoint-initdb.d
     networks:
       - lawgate-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U lawgate_user -d lawgate_db"]
       interval: 10s
@@ -29,6 +30,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=lawgate_db;Username=lawgate_user;Password=lawgate_dev_password_change_in_production
+      - ASPNETCORE_URLS=http://+:8080
     ports:
       - "5000:8080"
     depends_on:
@@ -38,6 +40,7 @@ services:
       - lawgate-network
     volumes:
       - ./backend:/app
+    restart: unless-stopped
     command: dotnet watch run
 
   frontend:
@@ -53,6 +56,7 @@ services:
       - backend
     networks:
       - lawgate-network
+    restart: unless-stopped
     volumes:
       - ./frontend:/app
       - /app/node_modules
