--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:16-alpine
@@ -25,23 +23,20 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     container_name: lawgate-backend
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=lawgate_db;Username=lawgate_user;Password=lawgate_dev_password_change_in_production
       - ASPNETCORE_URLS=http://+:8080
     ports:
-      - "5000:8080"
+      - "5059:8080"
     depends_on:
       postgres:
         condition: service_healthy
     networks:
       - lawgate-network
-    volumes:
-      - ./backend:/app
     restart: unless-stopped
-    command: dotnet watch run
 
   frontend:
     build:
@@ -49,9 +44,9 @@ services:
       dockerfile: Dockerfile.dev
     container_name: lawgate-frontend
     environment:
-      - VITE_API_URL=http://localhost:5000/api
+      - VITE_API_URL=http://localhost:5059/api
     ports:
-      - "3000:3000"
+      - "5173:5173"
     depends_on:
       - backend
     networks:
